# tennis

./: .gitignore  pyproject.toml  requirements.txt
examples/: calibration_pattern_example.py  camera_analysis_example.py  camera_calibration_example.py  complete_calibration_workflow_example.py  frame_selection_example.py  indoor_court_calibration_example.py  simple_calibration.py  video_acquisition_example.py
src/tennis/: __init__.py
src/tennis/analysis/: __init__.py  gait_analyzer.py
src/tennis/broadcast/: __init__.py  main_pipeline.py  professional_overlay.py
src/tennis/calibration/: __init__.py  broadcast_calibrator.py  calibration_engine.py  calibrator.py  indoor_court_detector.py  keypoint_detector.py  pattern_design.py  pattern_manager.py  pattern_variants.py  workflow_cli.py  workflow_config.py  workflow_orchestrator.py
src/tennis/camera_analysis/: __init__.py  analyzer.py  lighting_analyzer.py  metadata_extractor.py  motion_analyzer.py  position_estimator.py
src/tennis/detection/: __init__.py  detector.py
src/tennis/frame_selection/: __init__.py  court_detector.py  frame_scorer.py  quality_analyzer.py  selector.py
src/tennis/scoring/: __init__.py  broadcast_scorer.py
src/tennis/tracking/: __init__.py  ball_tracker.py
src/tennis/utils/: __init__.py  geometry.py
src/tennis/video/: __init__.py  overlay.py  processor.py
src/tennis/video_acquisition/: __init__.py  downloader.py  frame_extractor.py  memory_manager.py  pipeline.py  preprocessor.py
