[project]
name = "tennis"
version = "0.1.0"
dependencies = [
  # Computer Vision & ML
  "ultralytics",          # YOLO for court detection
  "mediapipe",            # Pose/object detection
  "opencv-python",        # Standard calibration
  "kornia",               # Differentiable CV operations
  "torch",
  "torchvision",
  "torchaudio",
  "scikit-image",
  "pillow",
  "numpy",

  # Video & Data Processing
  "video-reader-rs>=0.2.5",  # Fast video reading, macOS-arm64 & Python 3.12 compatible
  "yt-dlp",                  # Video downloading
  "pytubefix",
  "moviepy",
  "imageio[ffmpeg]",

  # Geometry & Visualization
  "shapely",               # Geometric operations
  "matplotlib",            # Plotting (minimal)

  # Development Tools
  "pytest",
  "black",
  "flake8",
  "ipython",
  "line_profiler",
]
